--- a/src/styles/antd.less
+++ b/src/styles/antd.less
@@ -1,7 +1,7 @@
 @import '~antd/dist/antd.dark.less';
 @import '~antd/dist/antd.compact.less';
 
-@body-background: #1A1A1D;
+@body-background: #1a1a1d;
 @font-size-base: 16px;
 @btn-height-base: 40px;
 @border-radius-base: 12px;
