--- a/client/src/styles/antd.less
+++ b/client/src/styles/antd.less
@@ -5,3 +5,6 @@
 @font-size-base: 16px;
 @btn-height-base: 40px;
 @border-radius-base: 12px;
+@height-sm: 30px;
+@height-base: 40px;
+@height-lg: 45px;
